[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "brotli>=1.2.0",
    "cffconvert>=2.0.0",
    "fonttools>=4.61.1",
    "pykwalify>=1.8.0",
    "pynacl>=1.6.2",
    "ruamel-yaml>=0.19.1",
    "weasyprint>=68.1",
]
